Multiple Fixes & Features
- Alt Text Error that made the image take way too long to load
- Made scrollbars look absolutely hot
- Fix wallpapers being cut off at weird heights

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,3 +40,35 @@ header {
 	backdrop-filter: blur(1.5em);
 	-webkit-backdrop-filter: blur(1.5em);
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgb(31, 27, 27);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: rgb(66, 60, 60);
+}
+
+::-moz-scrollbar {
+	width: 10px;
+}
+
+::-moz-scrollbar-track {
+	background: rgba(0, 0, 0, 0.1);
+}
+
+::-moz-scrollbar-thumb {
+	background: rgb(31, 27, 27);
+}
+
+::-moz-scrollbar-thumb:hover {
+	background: rgb(66, 60, 60);
+}
